# general_library

./: .dockerignore  .env  .gitignore  README.md  deepseek_markdown_20250716_10be7f.md  docker-compose.yml  minio_run.bat  pyproject.toml  pytest.ini
data/minio/.minio.sys/: format.json
frontend/: Dockerfile  package-lock.json  tailwind.config.ts
frontend/client/: App.tsx
frontend/client/components/: BookDetailModal.tsx  BooksList.tsx  ExchangeOfferModal.tsx  Header.tsx  ImageLightbox.tsx  LeaveReviewForm.tsx  Pagination.tsx  ReviewSection.tsx  UploadBookModal.tsx
frontend/client/pages/: Account.tsx  (+4 more)
src/: Dockerfile  config.py  constants.py  main.py
src/auth/: config.py
src/core/: config.py  deps.py  exceptions.py  jwt.py  limiter.py  logger.py  pagination.py  security.py  sqlErrors.py
src/db/: database.py
src/middleware/: logging.py  request_id.py
src/minio/: minio_client.py
src/models/: __init__.py  events.py  models.py
src/routers/: active_orders.py  auth.py  books.py  carts.py  categories.py  exchange_offers.py  exchangeoffers.py  files.py  lockers.py  users.py
src/schemas/: active_orders.py  activeorders.py  auth.py  books.py  carts.py  categories.py  dto.py  exchange_offers.py  exchangeoffers.py  lockers.py  users.py
src/services/: active_orders.py  auth.py  books.py  carts.py  categories.py  exchange_offers.py  exchangeoffers.py  lockers.py  users.py
src/utils/: responses.py
tests/: conftest.py  test_active_orders.py  test_auth.py  test_books.py  test_carts.py  test_categories.py  test_exchange_offers.py  test_lockers.py  test_users.py
